[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/GuiArrow.tscn" type="PackedScene" id=1]
[ext_resource path="res://themes/ButtonNormal.tres" type="StyleBox" id=2]
[ext_resource path="res://themes/ButtonPressed.tres" type="StyleBox" id=3]
[ext_resource path="res://themes/pompy-sans-condensed.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scripts/GUI.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )
Button/colors/font_color = Color( 0.270588, 0.294118, 0.294118, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.270588, 0.294118, 0.294118, 1 )
Button/colors/font_color_pressed = Color( 0.196078, 0.243137, 0.258824, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = ExtResource( 2 )
Button/styles/focus = ExtResource( 2 )
Button/styles/hover = ExtResource( 2 )
Button/styles/normal = ExtResource( 2 )
Button/styles/pressed = ExtResource( 3 )
Label/colors/font_color = Color( 0.270588, 0.294118, 0.294118, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 0 )
Label/colors/font_outline_modulate = Color( 1, 1, 1, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = null
Label/styles/normal = null

[sub_resource type="Animation" id=3]
resource_name = "Disappear"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Label:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:percent_visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("Label:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="ArrowRight" parent="." instance=ExtResource( 1 )]

[node name="ArrowUp" parent="." instance=ExtResource( 1 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 29.0
margin_bottom = 29.0

[node name="ArrowLeft" parent="." instance=ExtResource( 1 )]
margin_left = -11.0
margin_right = 29.0

[node name="ArrowDown" parent="." instance=ExtResource( 1 )]
margin_left = 0.0
margin_right = 29.0

[node name="Label" type="Label" parent="."]
margin_left = 100.0
margin_top = 124.0
margin_right = 250.0
margin_bottom = 140.0
theme = SubResource( 2 )
text = "Press TAB to cycle through targets."
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Disappear = SubResource( 3 )
anims/Write = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
